[test]恢复watcher-plugin-contribution的配置

--- a/watcher/watcher-plugin/watcher-plugin-contribution/deploy/sandbox/deployment.yaml
+++ b/watcher/watcher-plugin/watcher-plugin-contribution/deploy/sandbox/deployment.yaml
@@ -28,42 +28,42 @@ spec:
           - name: DB_HOST
             valueFrom:
               secretKeyRef:
-                name: database-chainscan
-                key: db-host
+                name: database-contribution
+                key: url
           - name: DB_PORT
             valueFrom:
               secretKeyRef:
-                name: database-chainscan
-                key: db-port
+                name: database-contribution
+                key: port
           - name: DB_USERNAME
             valueFrom:
               secretKeyRef:
-                name: database-chainscan
+                name: database-contribution
                 key: username
           - name: DB_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: database-chainscan
+                name: database-contribution
                 key: password
           - name: DB_NAME
             valueFrom:
               secretKeyRef:
-                name: database-chainscan
-                key: contribution-plugin-db-name
+                name: database-contribution
+                key: db-name
           - name: vmWeb3Url
             valueFrom:
               configMapKeyRef:
-                name: chainscan-watcher-config
-                key: dtx.api
+                name: watcher-contribution-config
+                key: vm-web3-url
           - name: ethWeb3Url
             valueFrom:
               configMapKeyRef:
-                name: chainscan-watcher-config
-                key: ether.api
+                name: watcher-contribution-config
+                key: eth-web3-url
           - name: feeAccountPrivateKey
             valueFrom:
               configMapKeyRef:
-                name: chainscan-watcher-config
+                name: watcher-contribution-config
                 key: fee-account-private-key
         resources:
           requests:
