[test]配置项修改

--- a/watcher/watcher-bootstrap/deploy/production/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/deployment.yaml
@@ -57,7 +57,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: database-chainscan
-                key: database-url
+                key: url
           - name: "spring.datasource.username"
             valueFrom:
               secretKeyRef:
