--- a/watcher/watcher-bootstrap/deploy/sandbox/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/deployment.yaml
@@ -47,7 +47,7 @@ spec:
           - name: TZ
             value: UTC
           - name: "evm.chain.rinkebyUrl"
-            value: "http://vmchain-dev-node-0-sandbox.chain-sandbox.svc.cluster.local:9934"
+            value: "http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf"
           - name: "nacos.config.server-addr"
             valueFrom:
               configMapKeyRef:
