--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
@@ -8,18 +8,10 @@ spring.jpa.show-sql=false
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 
-# VMChain test
-#evm.chain.rinkebyStep=10
-#evm.chain.rinkebyChainId=97
-#evm.chain.rinkebyUrl=http://rinkeby.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
-#evm.chain.rinkebyUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
-#evm.chain.rinkebyUrl=http://vmchain-node-0-sandbox.chain-sandbox.svc.cluster.local:9934
-#evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
-
 #VMChain dev
 evm.chain.rinkebyStep=10
 evm.chain.rinkebyChainId=97
-evm.chain.rinkebyUrl=http://vmchain-dev-node-0-sandbox.chain-sandbox.svc.cluster.local:9934
+evm.chain.rinkebyUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
 
 
