--- a/watcher/watcher-plugin/pom.xml
+++ b/watcher/watcher-plugin/pom.xml
@@ -31,7 +31,7 @@
 
     <modules>
         <module>watcher-plugin-evm</module>
-        <module>watcher-plugin-summary</module>
+<!--        <module>watcher-plugin-summary</module>-->
         <module>watcher-plugin-incentive</module>
         <module>watcher-plugin-token</module>
     </modules>
