--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-dev.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-dev.properties
@@ -14,5 +14,5 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #VMChain dev
 evm.chain.rinkebyStep=10
 evm.chain.rinkebyChainId=97
-evm.chain.rinkebyUrl=http://vmchain-dev-node-0-sandbox.chain-sandbox.svc.cluster.local:9934
+evm.chain.rinkebyUrl=http://vmdev.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
