--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-prd.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-prd.properties
@@ -19,5 +19,5 @@ spring.jpa.hibernate.ddl-auto=update
 #VMChain dev
 evm.chain.rinkebyStep=10
 evm.chain.rinkebyChainId=97
-evm.chain.rinkebyUrl=http://vmchain-dev-node-0-sandbox.chain-sandbox.svc.cluster.local:9934
+evm.chain.rinkebyUrl=http://vmdev.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
