--- a/watcher/watcher-bootstrap/pom.xml
+++ b/watcher/watcher-bootstrap/pom.xml
@@ -66,11 +66,11 @@
             <artifactId>watcher-plugin-evm</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>ai.everylink.chainscan</groupId>
-            <artifactId>watcher-plugin-summary</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>ai.everylink.chainscan</groupId>-->
+<!--            <artifactId>watcher-plugin-summary</artifactId>-->
+<!--            <version>1.0.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>ai.everylink.chainscan</groupId>
