--- a/watcher/vmchain-watcher-node/deploy/sandbox/deployment.yaml
+++ b/watcher/vmchain-watcher-node/deploy/sandbox/deployment.yaml
@@ -49,7 +49,7 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: database-chainscan
-                key: db-name
+                key: chainscan-cpos-db-name
           - name: vmWeb3Url
             valueFrom:
               configMapKeyRef:
