--- a/watcher/watcher-bootstrap/deploy/sandbox/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: $APP_NAME-sandbox
-        image:  $REGISTRY/$APP_NAME:SNAPSHOT-$BUILD_NUMBER
+        image:  $REGISTRY/$APP_NAME:SNAPSHOT-78
         livenessProbe:
           httpGet:
             path: /healthz
