--- a/watcher/watcher-plugin/watcher-plugin-contribution/deploy/sandbox/deployment.yaml
+++ b/watcher/watcher-plugin/watcher-plugin-contribution/deploy/sandbox/deployment.yaml
@@ -50,7 +50,7 @@ spec:
               secretKeyRef:
                 name: database-contribution
                 key: db-name
-          - name: vmWeb3Url
+          - name: DTX_WEB3J_URL
             valueFrom:
               configMapKeyRef:
                 name: watcher-contribution-config
