--- a/watcher/watcher-bootstrap/deploy/sandbox/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/deployment.yaml
@@ -68,6 +68,11 @@ spec:
               secretKeyRef:
                 name: database-chainscan
                 key: password
+          - name: "watcher.rocketmq.server.addr"
+              valueFrom:
+                configMapKeyRef:
+                  name: chainscan-watcher-config
+                  key: watcher.rocketmq.server.addr
           - name: "coin.ether.api"
             valueFrom:
               configMapKeyRef:
