--- a/watcher/watcher-plugin/watcher-plugin-evm/pom.xml
+++ b/watcher/watcher-plugin/watcher-plugin-evm/pom.xml
@@ -49,5 +49,23 @@
             <artifactId>commons-codec</artifactId>
             <version>1.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.79</version>
+        </dependency>
     </dependencies>
 </project>
