--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 
+
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
@@ -15,3 +16,6 @@ evm.chain.rinkebyStep=100
 evm.chain.rinkebyChainId=97
 evm.chain.rinkebyUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
+evm.chain.rocketmqSrvAddr=rocketmq-namesrv.database.svc.cluster.local:9876
+
+
