[test] chainid修改，配置变量名修改

--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
@@ -9,9 +9,9 @@ spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 
 #VMChain dev
-evm.chain.rinkebyStep=100
-evm.chain.rinkebyChainId=97
-evm.chain.rinkebyUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
-evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
+evm.chain.dtxScanStep=100
+evm.chain.dtxChainId=230
+evm.chain.dtxUrl=http://vmdev.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+evm.chain.dtxRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
 
 
