--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-dev.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-dev.properties
@@ -3,8 +3,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
-#VMChain dev
-evm.chain.rinkebyStep=100
-evm.chain.rinkebyChainId=97
-evm.chain.rinkebyUrl=http://vmdev.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
-evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
+evm.chain.dtxScanStep=100
+evm.chain.dtxChainId=230
+evm.chain.dtxUrl=http://vmdev.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+evm.chain.dtxRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
+evm.chain.rocketmqSrvAddr=rocketmq-namesrv.database.svc.cluster.local:9876
