--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-prd.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-prd.properties
@@ -9,7 +9,7 @@ spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 
 #VMChain dev
-evm.chain.rinkebyStep=100
-evm.chain.rinkebyChainId=299
-evm.chain.rinkebyUrl=https://vmtestnet.chainfra.io/v1/df8371a1d8cbc835147df382bb1144a9
-evm.chain.rinkebyRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
+evm.chain.dtxScanStep=100
+evm.chain.dtxChainId=230
+evm.chain.dtxUrl=https://vmtestnet.chainfra.io/v1/df8371a1d8cbc835147df382bb1144a9
+evm.chain.dtxRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
