--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 #VMChain dev
 evm.chain.dtxScanStep=100
 evm.chain.dtxChainId=230
-evm.chain.dtxUrl=http://vmdev.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
+evm.chain.dtxUrl=http://vmdtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 evm.chain.dtxRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
 
 
