--- a/watcher/vmchain-watcher-node/run/agent_config_meta.json
+++ b/watcher/vmchain-watcher-node/run/agent_config_meta.json
@@ -245,7 +245,8 @@
     "pageUrl": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js"
   },
   "siteFile": {
-    "/favicon.ico": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js"
+    "/favicon.ico": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js",
+    "cacheControl": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js"
   },
   "bodyParser": {
     "enable": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js",
