--- a/watcher/watcher-bootstrap/src/main/resources/application.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application.yml
@@ -24,6 +24,8 @@ spring:
     allow-bean-definition-overriding: true
   application:
     name: watcher-bootstrap
+  jpa:
+    generate-ddl: false
 
 management:
   health:
