--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
@@ -1,6 +1,11 @@
-spring.datasource.url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/chainscan?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=ZxcvAsdf
+spring.datasource.chainscan.jdbc-url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/chainscan?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.chainscan.username=root
+spring.datasource.chainscan.password=ZxcvAsdf
+
+spring.datasource.bridge.jdbc-url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/bridge?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.bridge.username=root
+spring.datasource.bridge.password=ZxcvAsdf
+
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
