--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # environment
-spring.datasource.url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/rinkeby?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/chainscan?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=ZxcvAsdf
-evm.chain.scanStep=4
-evm.chain.chainId=4
-evm.chain.chainType=EVM_PoW
+evm.chain.scanStep=100
+evm.chain.chainId=97
+evm.chain.chainType=EVM_PoS
 evm.chain.chainRpcUrl=https://rinkeby.infura.io/v3/b9769dd0ae344706b1cebca95e52e887
 
 evm.chain.rocketmqSrvAddr=rocketmq-namesrv.database.svc.cluster.local:9876
