--- a/watcher/watcher-bootstrap/deploy/sandbox/node0/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node0/deployment.yaml
@@ -53,17 +53,17 @@ spec:
               configMapKeyRef:
                 name: nacos-config
                 key: nacos.config.server-addr
-          - name: "spring.datasource.url"
+          - name: "spring.datasource.chainscan.jdbc-url"
             valueFrom:
               secretKeyRef:
                 name: database-chainscan
                 key: url
-          - name: "spring.datasource.username"
+          - name: "spring.datasource.chainscan.username"
             valueFrom:
               secretKeyRef:
                 name: database-chainscan
                 key: username
-          - name: "spring.datasource.password"
+          - name: "spring.datasource.chainscan.password"
             valueFrom:
               secretKeyRef:
                 name: database-chainscan
@@ -122,5 +122,4 @@ spec:
                     values:
                       - $APP_NAME-node-0-sandbox
                       - $APP_NAME-node-1-sandbox
-                      - $APP_NAME-node-2-sandbox
               topologyKey: "kubernetes.io/hostname"
