--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.chainscan.username=root
 spring.datasource.chainscan.password=ZxcvAsdf
 evm.chain.scanStep=100
 evm.chain.chainId=4
-evm.chain.chainType=EVM_PoS
+evm.chain.chainType=EVM_PoW
 evm.chain.chainRpcUrl=https://rinkeby.infura.io/v3/b9769dd0ae344706b1cebca95e52e887
 
 evm.chain.rocketmqSrvAddr=rocketmq-namesrv.database.svc.cluster.local:9876
