[test]自动创建表的问题

--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -15,7 +15,8 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+#
+spring.jpa.hibernate.ddl-auto=none
 
 evm.chain.dtxRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
 
