--- a/watcher/watcher-bootstrap/deploy/sandbox/node0/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node0/deployment.yaml
@@ -101,9 +101,11 @@ spec:
           - name: "watcher.chain.scanStep"
             value: 100
           - name: "watcher.chain.chainId"
-            value: 97
+            value: 230
           - name: "watcher.chain.chainType"
             value: EVM_PoS
+          - name: "watcher.notify.template"
+            value: DTX_CHAIN_NOTIFY
       volumes:
       - name: host-time
         hostPath:
