--- a/watcher/watcher-bootstrap/deploy/production/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node1/deployment.yaml
@@ -105,7 +105,7 @@ spec:
           - name: "watcher.chain.chainType"
             value: EVM_PoW
           - name: "watcher.notify.template"
-            value: RINKEBY_CHAIN_NOTIFY
+            value: RINKEBY
       volumes:
       - name: host-time
         hostPath:
