--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
-spring.datasource.bridge.jdbc-url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/bridge?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
-spring.datasource.bridge.username=root
-spring.datasource.bridge.password=ZxcvAsdf
 
 
+spring.datasource.wallet.jdbc-url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/wallet?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.wallet.username=root
+spring.datasource.wallet.password=ZxcvAsdf
 
