--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 # environment
-spring.datasource.chainscan.jdbc-url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/rinkeby?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.chainscan.jdbc-url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/chainscan?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.chainscan.username=root
 spring.datasource.chainscan.password=ZxcvAsdf
 evm.chain.scanStep=100
 evm.chain.chainId=4
 evm.chain.chainType=EVM_PoW
-evm.chain.chainRpcUrl=https://rinkeby.infura.io/v3/b9769dd0ae344706b1cebca95e52e887
+evm.chain.chainRpcUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 
 evm.chain.rocketmqSrvAddr=rocketmq-namesrv.database.svc.cluster.local:9876
+
 
 
 # non-environment
