--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.chainscan.username=root
 spring.datasource.chainscan.password=ZxcvAsdf
 evm.chain.scanStep=100
 evm.chain.chainId=230
-evm.chain.chainType=EVM_PoW
+evm.chain.chainType=EVM_PoS
 evm.chain.chainRpcUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
 
 evm.chain.rocketmqSrvAddr=rocketmq-namesrv.database.svc.cluster.local:9876
@@ -14,7 +14,7 @@ evm.chain.rocketmqSrvAddr=rocketmq-namesrv.database.svc.cluster.local:9876
 # non-environment
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.database=mysql
 #
 spring.jpa.hibernate.ddl-auto=none
