--- a/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
@@ -97,6 +97,8 @@ spec:
             value: http://ethereum-client-sandbox.chain-sandbox.svc.cluster.local:8545
           - name: "watcher.chain.scanStep"
             value: 200
+          - name: "watcher.chain.processStep"
+            value: 200
           - name: "watcher.chain.chainId"
             value: 4
           - name: "watcher.chain.chainType"
