--- a/watcher/watcher-bootstrap/deploy/production/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node1/deployment.yaml
@@ -100,6 +100,8 @@ spec:
                 key: ether.rpc.api
           - name: "watcher.chain.scanStep"
             value: 200
+          - name: "watcher.chain.processStep"
+            value: 200
           - name: "watcher.chain.chainId"
             value: 4
           - name: "watcher.chain.chainType"
