--- a/watcher/watcher-bootstrap/deploy/sandbox/node0/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node0/deployment.yaml
@@ -100,6 +100,8 @@ spec:
                 key: dtx.rpc.api
           - name: "watcher.chain.scanStep"
             value: 100
+          - name: "watcher.chain.processStep"
+            value: 200
           - name: "watcher.chain.chainId"
             value: 230
           - name: "watcher.chain.chainType"
