--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.chainscan.jdbc-url=jdbc:mysql://exchange-mysql5-7.database.svc
 spring.datasource.chainscan.username=root
 spring.datasource.chainscan.password=ZxcvAsdf
 evm.chain.scanStep=100
+evm.chain.processStep=100
 evm.chain.chainId=230
 evm.chain.chainType=EVM_PoS
 evm.chain.chainRpcUrl=http://vmtest.infra.powx.io/v1/72f3a83ea86b41b191264bd16cbac2bf
