fix： cpos-watch 解决交易时间转换错误

--- a/watcher/vmchain-watcher-node/run/agent_config_meta.json
+++ b/watcher/vmchain-watcher-node/run/agent_config_meta.json
@@ -188,6 +188,7 @@
       "egg-scripts": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js",
       "ethereumjs-tx": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js",
       "ethers": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js",
+      "moment": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js",
       "request": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js",
       "web3": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js",
       "zksync": "/Users/inkoukusunoki/Desktop/ 一点万物/chainscan-infra/watcher/vmchain-watcher-node/node_modules/egg/config/config.default.js",
