--- a/watcher/vmchain-watcher-node/run/agent_config.json
+++ b/watcher/vmchain-watcher-node/run/agent_config.json
@@ -194,6 +194,7 @@
         "egg-scripts": "^2.11.0",
         "ethereumjs-tx": "2.1.2",
         "ethers": "5.5.3",
+        "moment": "^2.29.1",
         "request": "^2.88.2",
         "web3": "^1.7.1",
         "zksync": "^0.11.1",
