--- a/watcher/watcher-bootstrap/deploy/sandbox/node0/service.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node0/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: $APP_NAME-node-0-sandbox
+  name: $APP_NAME-dtx-sandbox
   namespace: paas
 spec:
   ports:
@@ -11,7 +11,7 @@ spec:
     protocol: TCP
 #    nodePort: 41296
   selector:
-    app: $APP_NAME-node-0-sandbox
+    app: $APP_NAME-dtx-sandbox
   sessionAffinity: None
 #  type: NodePort
   type: ClusterIP
