--- a/watcher/Jenkinsfile
+++ b/watcher/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
       steps {
         dir('watcher') {
           container('maven-jdk11') {
+            sh 'mvn clean package deploy'
             sh 'mvn -DskipTests -Drat.skip=true clean deploy'
           }
         }
