[test]扫块入库优化

--- a/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
@@ -101,6 +101,8 @@ spec:
             value: 200
           - name: "watcher.chain.chainId"
             value: 4
+          - name: "watcher.chain.batchInsertSize"
+            value: 30
           - name: "watcher.chain.chainType"
             value: EVM_PoW
           - name: "watcher.notify.template"
