--- a/watcher/watcher-bootstrap/deploy/production/node0/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node0/deployment.yaml
@@ -104,6 +104,8 @@ spec:
             value: 200
           - name: "watcher.chain.chainId"
             value: 230
+          - name: "watcher.chain.batchInsertSize"
+            value: 30
           - name: "watcher.chain.chainType"
             value: EVM_PoS
           - name: "watcher.notify.template"
