--- a/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
@@ -107,6 +107,10 @@ spec:
             value: EVM_PoW
           - name: "watcher.notify.template"
             value: RINKEBY
+          - name: "watcher.scan.switch"
+            value: false
+          - name: "watcher.process.concurrent.switch"
+            value: false
       volumes:
       - name: host-time
         hostPath:
