--- a/watcher/watcher-bootstrap/deploy/sandbox/node0/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node0/deployment.yaml
@@ -125,6 +125,10 @@ spec:
             value: EVM_PoS
           - name: "watcher.notify.template"
             value: DTX_TEST
+          - name: "watcher.scan.switch"
+            value: false
+          - name: "watcher.process.concurrent.switch"
+            value: false
       volumes:
       - name: host-time
         hostPath:
