--- a/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
@@ -108,9 +108,9 @@ spec:
           - name: "watcher.notify.template"
             value: RINKEBY
           - name: "watcher.scan.switch"
-            value: false
+            value: true
           - name: "watcher.process.concurrent.switch"
-            value: false
+            value: true
       volumes:
       - name: host-time
         hostPath:
