--- a/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
@@ -112,7 +112,7 @@ spec:
           - name: "watcher.process.concurrent.switch"
             value: true
           - name: "watcher.process.only.evmplugin"
-            value: false
+            value: true
       volumes:
       - name: host-time
         hostPath:
