--- a/watcher/vmchain-watcher-node/deploy/sandbox/deployment.yaml
+++ b/watcher/vmchain-watcher-node/deploy/sandbox/deployment.yaml
@@ -55,7 +55,26 @@ spec:
               configMapKeyRef:
                 name: watcher-contribution-config
                 key: dtx-web3-url
-
+          - name: eth_l2_api_url
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-contribution-config
+                key: eth_l2_api_url
+          - name: dtx_l2_api_url
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-contribution-config
+                key: dtx_l2_api_url
+          - name: eth_chain_id
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-contribution-config
+                key: eth_chain_id
+          - name: dtx_chain_id
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-contribution-config
+                key: dtx_chain_id
         resources:
           requests:
             cpu: 100m
