--- a/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
@@ -113,6 +113,8 @@ spec:
             value: true
           - name: "watcher.process.only.evmplugin"
             value: true
+          - name: "watcher.bridge.contract.address"
+            value: "0xf62B76556f86503C9986F25D3DC59CC538f50f51"
       volumes:
       - name: host-time
         hostPath:
