--- a/watcher/watcher-bootstrap/deploy/production/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node1/deployment.yaml
@@ -116,6 +116,8 @@ spec:
             value: false
           - name: "watcher.monitor.interval.secs"
             value: 60
+          - name: "watcher.bridge.contract.address"
+            value: "0xb382f247ef75878cac13c8a8b63816249b43f4b9"
       volumes:
       - name: host-time
         hostPath:
