--- a/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node1/deployment.yaml
@@ -116,7 +116,7 @@ spec:
           - name: "watcher.bridge.contract.address"
             value: "0xf62B76556f86503C9986F25D3DC59CC538f50f51"
           - name: "watcher.monitor.interval.secs"
-            value: 60
+            value: 6000000
       volumes:
       - name: host-time
         hostPath:
