[test] hikari线程池调整

--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -24,3 +24,13 @@ evm.chain.dtxRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
 
 
 
+#hikari
+spring.datasource.hikari.pool-name=watcher-plugin
+spring.datasource.hikari.maximum-pool-size=200
+spring.datasource.hikari.minimum-idle=20
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.idle-timeout=600000
+
+
+
+
