--- a/watcher/watcher-bootstrap/deploy/production/node0/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node0/deployment.yaml
@@ -129,8 +129,8 @@ spec:
             value: false
           - name: "watcher.process.concurrent.switch"
             value: false
-          - name: "watcher.monitor.interval.secs"
-            value: 60
+          - name: "watcher.monitor.cron"
+            value: "0 */1 * * * ?"
           - name: "watcher.bridge.contract.address"
             value: "0xb382f247ef75878cac13c8a8b63816249b43f4b9"
       volumes:
