--- a/watcher/watcher-core/pom.xml
+++ b/watcher/watcher-core/pom.xml
@@ -197,5 +197,11 @@
             <artifactId>common-utils</artifactId>
             <version>1.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
 </project>
